--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Cita app",
   "short_name": "Cita",
-  "start_url": "page/index.html",
+  "start_url": "index.html",
   "display": "standalone",
   "background_color": "#0b2b40",
   "theme_color": "#0b2b40",
