--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Cita app",
   "short_name": "Cita",
-  "start_url": "index.html",
+  "start_url": "pages/index.html",
   "display": "standalone",
   "background_color": "#0b2b40",
   "theme_color": "#0b2b40",
@@ -9,25 +9,25 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-        "src": "/image/icon-192x192.png",
-        "sizes": "192x192",
-        "type": "image/png",
-        "purpose": "maskable"
+      "src": "/image/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
     },
     {
-        "src": "/image/icon-256x256.png",
-        "sizes": "256x256",
-        "type": "image/png"
+      "src": "/image/icon-256x256.png",
+      "sizes": "256x256",
+      "type": "image/png"
     },
     {
-        "src": "/image/icon-384x384.png",
-        "sizes": "384x384",
-        "type": "image/png"
+      "src": "/image/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png"
     },
     {
-        "src": "/image/icon-512x512.png",
-        "sizes": "512x512",
-        "type": "image/png"
+      "src": "/image/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ]
 }
